RESOLVED FIXED192566
DataChannels created asynchronously never open and are unusable
https://bugs.webkit.org/show_bug.cgi?id=192566
Summary DataChannels created asynchronously never open and are unusable
Thomas Mullen
Reported 2018-12-10 13:25:51 PST
RTCDataChannels that are created asynchronously will never open. This makes it impossible to create new channels later in the connection. Chrome and Firefox have no such issue. Simple reproduction: https://codepen.io/RationalCoding/pen/Qzwqrg?editors=0011
Attachments
Patch (6.82 KB, patch)
2018-12-10 15:12 PST, youenn fablet
no flags
Thomas Mullen
Comment 1 2018-12-10 13:26:58 PST
It should be noted that the channel is received by the remote peer (ondatachannel is fired). The channel just never opens and cannot send data.
youenn fablet
Comment 2 2018-12-10 15:12:42 PST
WebKit Commit Bot
Comment 3 2018-12-10 19:43:47 PST
Comment on attachment 357004 [details] Patch Clearing flags on attachment: 357004 Committed r239064: <https://trac.webkit.org/changeset/239064>
WebKit Commit Bot
Comment 4 2018-12-10 19:43:48 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-12-10 19:44:25 PST
Note You need to log in before you can comment on or make changes to this bug.