Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.h
@@ -57,6 +57,7 @@ public:
 private:
     // RTCDataChannelHandler API
     void setClient(RTCDataChannelHandlerClient&) final;
+    void checkState();
     bool sendStringData(const String&) final;
     bool sendRawData(const char*, size_t) final;
     void close() final;
